# 6502-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
examples/: 6502_functional_test.lst  CMakeLists.txt  example1.c  example_1.c  example_2.c
include/: 6502.h  common.h  cpu.h  debug.h  functions.h  instruction.h  memory.h  opcodes.h  user_interface.h
include/6502/: debug.h  instruction.h  memory.h
src/: 6502.c  CMakeLists.txt  cpu.c  functions.c  instruction.c  main.c  user_interface.c
src/6502/: 6502.c  CMakeLists.txt  cpu.c  instruction.c  instruction_matrix.c  memory.c
src/cpu6502/: 6502.c  CMakeLists.txt  cpu.c  instruction.c  memory.c
test/: ADC_tests.cpp  AND_tests.cpp  ASL_tests.cpp  AddressingMode_tests.cpp  BCC_tests.cpp  BCS_tests.cpp  BEQ_tests.cpp  BIT_tests.cpp  BMI_tests.cpp  BNE_tests.cpp  BPL_tests.cpp  BVC_tests.cpp  BVS_tests.cpp  CLC_tests.cpp  CLD_tests.cpp  CLI_tests.cpp  CLV_tests.cpp  CMakeLists.txt  DEX_tests.cpp  DEY_tests.cpp  LDA_tests.cpp  LDX_tests.cpp  LDY_tests.cpp  NOP_tests.cpp  SEC_tests.cpp  SED_tests.cpp  SEI_tests.cpp  TAX_tests.cpp  TAY_tests.cpp  TXA_tests.cpp  TYA_tests.cpp  test.c  test.cpp
